[project]
name = "agentsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "matplotlib>=3.10.3",
    "mesa>=3.2.0",
    "networkx>=3.4.2",
    "solara>=1.47.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
